[package]
name = "qcop-analytics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
urlencoding = "2.1.2"
regex = "1.7.0"

[profile.dev]
overflow-checks = false # Disable integer overflow checks

[profile.release]
#lto = "thin" # link-time optimization false / fat
